# challenges

./: Cargo.toml  README.md  test.sh
interpreter/: Cargo.toml  README.md
interpreter/src/lexer/: mod.rs  token.rs
rust-distributed-sys/: README.md  test.fish
rust-distributed-sys/src/: lib.rs
src/: lib.rs  main.rs
