[package]
  edition = "2021"
  name    = "rust-distributed-sys-challenge"
  version = "0.1.0"

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  anyhow     = "1"
  serde      = { version = "1", features = ["derive"] }
  serde_json = "1"
