[package]
  edition = "2021"
  name    = "rust-distributed-sys-challenge"
  version = "0.1.0"

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  anyhow     = "1"
petgraph = "0.6.3"
petgraph-gen = "0.1.3"
rand = "0.8.5"
  serde      = { version = "1", features = ["derive"] }
  serde_json = "1"
  uuid       = { version = "1.3.0", features = ["v1", "std", "rng", "serde"] }
