[package]
  edition = "2021"
  name    = "rust-distributed-sys-challenge"
  version = "0.1.0"

  # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
  anyhow     = { version = "1", features = [] }
  rand       = "0.8.5"
  serde      = { version = "1", features = ["derive"] }
  serde_json = "1.0.96"
  uuid       = { version = "1.3.1", features = ["v1", "std", "rng", "serde"] }
